[tool.poetry]
name = "Devoir-2-hebert-dufresne"
version = "0.1.0"
description = ""
authors = ["TimotheeHebert <timothee.hebert@usherbrooke.ca>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8, <3.12"
scipy = "^1.10.0"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
